--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,18 +3,31 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
   {
     date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+    title: "Software Analyst Solutions Development",
+    company: "BBVA",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+      "Desarrollo de librerías, transacciones y rutinas para productos de cotización, venta y cobranza de seguros, desarrollo de componentes web en base al figma de la empresa.",
   },
   {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
+    date: "Junio del 2022 - Diciembre del 2023",
+    title: "Desarrollador Frontend Senior",
+    company: "Interbank (By NTT Data)",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Desarrollo del app empresas versión 2023 con Ionic y Angular, desarrollo de sistema interno de gestión de tarjetas con arquitectura de micro frontends.",
+  },
+  {
+    date: "Febrero del 2021 - Mayo del 2022",
+    title: "Desarrollador Full Stack",
+    company: "Clínica Carita Feliz",
+    description:
+      "Desarrollo de sistema de atención médico - ocupacional usando angular, spring boot y postgreSQL.",
+  },
+  {
+    date: "Marzo del 2019 - Diciembre del 2020",
+    title: "Desarrollador Full Stack",
+    company: "Usqay",
+    description:
+      "Desarrollo de sistema de gestión hotelera, desarrollo y mantenimiento de módulos de sistemas POS y Restaurantes, desarrollo de aplicaciones híbridas.",
   },
 ]
 ---
