--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,17 +4,18 @@ import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
 import SocialPill from "@/components/SocialPill.astro"
+import ProfileCheck from "./icons/ProfileCheck.astro"
 ---
 
 <div class="max-w-xl">
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/midudev.webp"
+      src="/vicodev.png"
       alt={personalImageAlt}
     />
     <a
-      href="https://linkedin.com/in/midudev"
+      href="https://linkedin.com/in/vicodev"
       target="_blank"
       rel="noopener"
       class="flex items-center transition md:justify-center md:hover:scale-105"
@@ -25,22 +26,26 @@ import SocialPill from "@/components/SocialPill.astro"
   <h1
     class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
   >
-    Hey, soy midudev
+    Hola, soy Victor Moreno
   </h1>
   <p
-    class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
+    class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-cyan-200 [&>strong]:text-cyan-600 [&>strong]:font-semibold dark:text-gray-300"
   >
-    +15 años de experiencia. <strong
-      >Ingeniero de Software y Creador de Contenido sobre Programación</strong
-    > de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web
+    +5 años de experiencia. <strong
+      >Ingeniero de Sistemas y Diseñador de UI y UX</strong
+    > de Piura, Perú PE. Especializado en el desarrollo de aplicaciones web
     únicas.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="mailto:miduga@gmail.com">
+    <SocialPill href="https://drive.google.com/file/d/1FrPL9myWsW-eoDwciRGPrSjNxjd7kcwE/view?usp=sharing">
+      <ProfileCheck class="size-4" />
+      Resume
+    </SocialPill>
+    <SocialPill href="mailto:morenovictorzapata@gmail.com">
       <MailIcon class="size-4" />
       Contáctame
     </SocialPill>
-    <SocialPill href="https://linkedin.com/in/midudev">
+    <SocialPill href="https://linkedin.com/in/vicodev">
       <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialPill>
