--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -37,7 +37,7 @@ import ProfileCheck from "./icons/ProfileCheck.astro"
     únicas.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="https://drive.google.com/file/d/1FrPL9myWsW-eoDwciRGPrSjNxjd7kcwE/view?usp=sharing">
+    <SocialPill href="https://drive.google.com/file/d/1wnig3wxaXOd4RoKM5qx5Bu1t_Ym4HUGI/view?usp=website">
       <ProfileCheck class="size-4" />
       Resume
     </SocialPill>
