--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,7 +3,7 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
   {
     date: "Actualmente...",
-    title: "Software Analyst Solutions Development",
+    title: "Software Associate Solutions Development",
     company: "BBVA",
     description:
       "Desarrollo de librerías, transacciones y rutinas para productos de cotización, venta y cobranza de seguros, desarrollo de componentes web en base al figma de la empresa.",
